--- a/index.html
+++ b/index.html
@@ -5,12 +5,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Supermercado SãoCarlos</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <header><a href="/">Home</a><a href="/"></a><a href="/">Nossa história</a><a href="/">Ofertas</a><a href="/">Trabalhe conosco</a><a href="/">Contato</a></header>
-  <main></main>
-  <footer></footer>
+  <header><img src="./imagens/logo.jpg" alt="calma ae"><a href="/">Home</a><a href="/">Nossa história</a><a href="/">Ofertas</a><a href="/">Trabalhe conosco</a><a href="/">Contato</a></header>
+  <main>
+    <div class="carrossel"></div>
+    <div class="quadrados"></div>
+    <div class="ofertasdia"></div>
+    <div class="encomendas"></div>
+    <div class="conhecamercado"></div>
+    <div class="mapa"></div>
+    <div class="cadastro"></div>
+  </main>
+  <footer> </footer>
 </body>
 
 </html>
