continuamento do projeto

--- a/index.html
+++ b/index.html
@@ -9,14 +9,54 @@
 </head>
 
 <body>
-  <header><img src="./imagens/logo.jpg" alt="calma ae"><a href="/">Home</a><a href="/">Nossa história</a><a href="/">Ofertas</a><a href="/">Trabalhe conosco</a><a href="/">Contato</a></header>
+  <header><img src="./imagens/logo.png" alt="calma ae"><a href="/">Home</a><a href="/">Nossa história</a><a href="/">Ofertas</a><a href="/">Trabalhe conosco</a><a href="/">Contato</a></header>
   <main>
     <div class="carrossel"></div>
-    <div class="quadrados"></div>
-    <div class="ofertasdia"></div>
-    <div class="encomendas"></div>
-    <div class="conhecamercado"></div>
-    <div class="mapa"></div>
+    <div class="quadrados">
+      <div class="qualidade">
+        <img src="./imagens/image1.png" alt="imagem">
+        <p>Qualidade</p>
+      </div>
+      <div class="precojusto">
+        <img src="./imagens/image2.png" alt="imagem">
+        <p>Preço justo</p>
+      </div>
+      <div class="atendimento">
+        <img src="./imagens/image3.png" alt="imagem">
+        <p>Bom atendimento</p>
+      </div>
+      <div class="entregas">
+        <img src="./imagens/image 4.png" alt="imagem">
+        <p>Entregas</p>
+      </div>
+    </div>
+    <div class="ofertasdia">
+      <h2>Ofertas do dia</h2>
+      <p>Referente ao dia 00/00/0000 até o dia 00/00/0000</p>
+    </div>
+    <div class="encomendas">
+      <h2>Encomende sua compras</h2>
+      <p>Levaremos até você <img src="" alt=""></p>
+    </div>
+    <div class="conhecamercado">
+      <h2>Conheça nosso mercado</h2>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/LXb3EKWsInQ?si=wWZ_GEY2SlMzsTLs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </div>
+    <div class="comoachar">
+      <h2>Como nos achar</h2>
+      <div class="gridmap">
+        <div class="mapbox"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3723.064448805074!2d-50.148378724967266!3d-21.070087980589612!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94962594e3938efb%3A0x237813ac8414fa59!2sSupermercado%20S%C3%A3o%20Carlos!5e0!3m2!1spt-BR!2sbr!4v1739805003700!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+        <div class="informacoesmapa">
+          <h3>Endereço:</h3>
+          <p>Av. Frei Marcelo Manília, 427 <br> Centro - Buritama - SP</p>
+          <h3>Funcionamento:</h3>
+          <p>Segunda a Sábado das 6:00 às 20:00 <br> Domingo das 6:00 às 13:00</p>
+          <h3>Telefone</h3>
+          <p>(18) 3691-2917</p>
+          <a href="https://maps.app.goo.gl/c5a73NDTmuxBxToc8">Ver no maps</a>
+        </div>
+      </div>
+    </div>
     <div class="cadastro"></div>
   </main>
   <footer> </footer>
