estruturando melhor o header

--- a/index.html
+++ b/index.html
@@ -9,7 +9,18 @@
 </head>
 
 <body>
-  <header><img src="./imagens/logo.png" alt="calma ae"><a href="/">Home</a><a href="/">Nossa história</a><a href="/">Ofertas</a><a href="/">Trabalhe conosco</a><a href="/">Contato</a></header>
+  <header>
+    <img src="./imagens/logo.png" alt="iconemercado">
+    <nav>
+      <ul>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./nossahistoria.html">Nossa história</a></li>
+        <li><a href="./ofertas.html">Ofertas</a></li>
+        <li><a href="./trabalheconosco.html">Trabalhe conosco</a></li>
+        <li><a href="./contato.html">Contato</a></li>
+      </ul>
+    </nav>
+  </header>
   <main>
     <div class="carrossel"></div>
     <div class="quadrados">
@@ -35,8 +46,9 @@
       <p>Referente ao dia 00/00/0000 até o dia 00/00/0000</p>
     </div>
     <div class="encomendas">
-      <h2>Encomende sua compras</h2>
+      <h2>Encomende suas compras</h2>
       <p>Levaremos até você <img src="" alt=""></p>
+      <a href="/"><img src="/" alt="imgzap">Peça já</a>
     </div>
     <div class="conhecamercado">
       <h2>Conheça nosso mercado</h2>
