--- a/nossahistoria.html
+++ b/nossahistoria.html
@@ -6,12 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="historia.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
   <title>NossaHistória</title>
 </head>
 
 <body>
   <header>
-    <img src="./imagens/logo.png" alt="iconemercado">
+    <img src="./imagens/index/logo.png" alt="iconemercado">
     <nav>
       <ul>
         <li><a href="./index.html">Home</a></li>
@@ -26,15 +29,15 @@
     <h1>Quem Somos</h1>
     <article>
       <section>
-        <img src="./imagens/historia1.png" alt="">
+        <img src="./imagens/historia/historia1.png" alt="">
         <p>Ao longo das décadas, buscamos constantemente evoluir, adaptando-nos às necessidades de nossos clientes, mas sempre mantendo o compromisso com a excelência no atendimento. Acreditamos que um bom atendimento é fundamental, por isso nossa equipe é treinada para oferecer um serviço personalizado e eficiente, buscando atender às expectativas e necessidades de cada pessoa que visita nossa loja. </p>
       </section>
       <section>
         <p>O Supermercado São Carlos, fundado em 10 de maio de 1979, é um verdadeiro marco em Buritama, São Paulo. Com mais de 40 anos de história, temos o orgulho de ser uma referência na cidade, oferecendo aos nossos clientes uma experiência de compras completa e satisfatória. Desde a nossa inauguração, nossa missão tem sido sempre a mesma: proporcionar produtos de qualidade com variedade e preços acessíveis, em um ambiente seguro e acolhedor. </p>
-        <img src="./imagens/historia2.png" alt="">
+        <img src="./imagens/historia/historia2.png" alt="">
       </section>
       <section>
-        <img src="./imagens/historia3.png" alt="">
+        <img src="./imagens/historia/historia3.png" alt="">
         <p>O Supermercado São Carlos é muito mais do que um simples lugar para fazer compras; somos parte da comunidade e trabalhamos todos os dias para garantir que nossos clientes encontrem tudo o que precisam com qualidade e confiança. Estamos aqui para continuar sendo o seu supermercado de confiança, proporcionando a melhor experiência de compra para você e sua família.</p>
       </section>
     </article>
