--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Supermercado SãoCarlos</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <header>
-    <img src="./imagens/logo.png" alt="iconemercado">
+    <img src="./imagens/index/logo.png" alt="iconemercado">
     <nav>
       <ul>
         <li><a href="./index.html">Home</a></li>
@@ -25,19 +28,19 @@
     <div class="carrossel"></div>
     <div class="quadrados">
       <div class="qualidade">
-        <img src="./imagens/image1.png" alt="imagem">
+        <img src="./imagens/index/image1.png" alt="imagem">
         <p>Qualidade</p>
       </div>
       <div class="precojusto">
-        <img src="./imagens/image2.png" alt="imagem">
+        <img src="./imagens/index/image2.png" alt="imagem">
         <p>Preço justo</p>
       </div>
       <div class="atendimento">
-        <img src="./imagens/image3.png" alt="imagem">
+        <img src="./imagens/index/image3.png" alt="imagem">
         <p>Bom atendimento</p>
       </div>
       <div class="entregas">
-        <img src="./imagens/image 4.png" alt="imagem">
+        <img src="./imagens/index/image 4.png" alt="imagem">
         <p>Entregas</p>
       </div>
     </div>
@@ -72,6 +75,7 @@
     <div class="cadastro"></div>
   </main>
   <footer> </footer>
+  <script src="./script.js"></script>
 </body>
 
 </html>
