--- a/index.html
+++ b/index.html
@@ -110,7 +110,33 @@
     </div>
     <div class="cadastro"></div>
   </main>
-  <footer> </footer>
+  <footer>
+    <div class="iconmercado">
+      <img src="./imagens/index/mercadoiconfooter.png" alt="">
+    </div>
+    <div class="iconsfooter">
+      <img src="./imagens/index/iconfooter1.png" alt="">
+      <img src="./imagens/index/iconfooter2.png" alt="">
+      <img src="./imagens/index/iconfooter3.png" alt="">
+      <img src="./imagens/index/iconfooter4.png" alt="">
+    </div>
+    <div class="descricaofooter">
+      <div class="localidade">
+        <h3>Localidade:</h3>
+        <p>Rua Machado de Assis, 12122 <br> Buritama - sp </p>
+      </div>
+      <div class="funcionamento">
+        <h3>Funcionamento:</h3>
+        <p>Segunda a sabado das 6:00 até 20:00 e ao domigo das 6:00 até às 13:00</p>
+      </div>
+      <div class="contato">
+        <h3>Contato:</h3>
+        <p><img src="./imagens/index/whatsappiconfooter.png" alt="">(18) 3691-2917</p>
+        <p><img src="./imagens/index/instagramiconfooter.png" alt=""><a href="https://www.instagram.com/sm_saocarlos/">@sm_saocarlos</a></p>
+        <p><img src="./imagens/index/facebookiconfooter.png" alt=""><a href="https://www.facebook.com/smsaocarlos/?locale=pt_BR">Supermercado São Carlos</a></p>
+      </div>
+    </div>
+  </footer>
   <script src="./script.js"></script>
 </body>
 
