--- a/trabalheconosco.html
+++ b/trabalheconosco.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Supermercado SãoCarlos</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style/trabalheconosco.css">
+  <link rel="stylesheet" href="./style/header.css">
+  <link rel="stylesheet" href="./style/footer.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
@@ -36,6 +38,34 @@
       </div>
     </form>
   </main>
+
+  <footer>
+    <div class="iconmercado">
+      <img src="./imagens/index/mercadoiconfooter.png" alt="">
+    </div>
+    <div class="iconsfooter">
+      <img src="./imagens/index/iconfooter1.png" alt="">
+      <img src="./imagens/index/iconfooter2.png" alt="">
+      <img src="./imagens/index/iconfooter3.png" alt="">
+      <img src="./imagens/index/iconfooter4.png" alt="">
+    </div>
+    <div class="descricaofooter">
+      <div class="localidade">
+        <h3>Localidade:</h3>
+        <p>Rua Machado de Assis, 12122 <br> Buritama - sp </p>
+      </div>
+      <div class="funcionamento">
+        <h3>Funcionamento:</h3>
+        <p>Segunda a sabado das 6:00 até 20:00 e ao domigo das 6:00 até às 13:00</p>
+      </div>
+      <div class="contato">
+        <h3>Contato:</h3>
+        <p><img src="./imagens/index/whatsappiconfooter.png" alt="">(18) 3691-2917</p>
+        <p><img src="./imagens/index/instagramiconfooter.png" alt=""><a href="https://www.instagram.com/sm_saocarlos/">@sm_saocarlos</a></p>
+        <p><img src="./imagens/index/facebookiconfooter.png" alt=""><a href="https://www.facebook.com/smsaocarlos/?locale=pt_BR">Supermercado São Carlos</a></p>
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
