css form, favicon, h1 header

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Supermercado SãoCarlos</title>
+  <link rel="shortcut icon" href="./imagens/index/favicon-32x32.png" type="image/x-icon">
   <link rel="stylesheet" href="./style/index.css">
   <link rel="stylesheet" href="./style/header.css">
   <link rel="stylesheet" href="./style/footer.css">
@@ -15,7 +16,10 @@
 
 <body>
   <header>
-    <img src="./imagens/index/logo.png" alt="Ícone Mercado">
+    <div>
+      <img src="./imagens/index/logo.png" alt="Ícone Mercado">
+      <h1>Supermercado São Carlos</h1>
+    </div>
     <nav>
       <ul>
         <li><a href="./index.html">Home</a></li>
@@ -175,7 +179,7 @@
           </div>
         </div>
         <div>
-          <input type="submit" value="Cadastrar">
+          <input id="submit" type="submit" value="Cadastrar">
         </div>
 
       </form>
@@ -221,7 +225,7 @@
 
 </body>
 
-<script src="./script/slide.js"></script>
+<script src="./script/slider.js"></script>
 <script src="./script/ofertasdia.js"></script>
 <script src="./script/cadastro.js"></script>
 
