--- a/nossahistoria.html
+++ b/nossahistoria.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="./imagens/index/favicon-32x32.png" type="image/x-icon">
   <link rel="stylesheet" href="./style/historia.css">
   <link rel="stylesheet" href="./style/header.css">
   <link rel="stylesheet" href="./style/footer.css">
@@ -15,7 +16,10 @@
 
 <body>
   <header>
-    <img src="./imagens/index/logo.png" alt="iconemercado">
+    <div>
+      <img src="./imagens/index/logo.png" alt="Ícone Mercado">
+      <h1>Supermercado São Carlos</h1>
+    </div>
     <nav>
       <ul>
         <li><a href="./index.html">Home</a></li>
