--- a/contato.html
+++ b/contato.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Supermercado SãoCarlos</title>
+  <link rel="shortcut icon" href="./imagens/index/favicon-32x32.png" type="image/x-icon">
   <link rel="stylesheet" href="./style/contato.css">
   <link rel="stylesheet" href="./style/header.css">
   <link rel="stylesheet" href="./style/footer.css">
@@ -15,7 +16,10 @@
 
 <body>
   <header>
-    <img src="./imagens/index/logo.png" alt="iconemercado">
+    <div>
+      <img src="./imagens/index/logo.png" alt="Ícone Mercado">
+      <h1>Supermercado São Carlos</h1>
+    </div>
     <nav>
       <ul>
         <li><a href="./index.html">Home</a></li>
