--- a/trabalheconosco.html
+++ b/trabalheconosco.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Supermercado SãoCarlos</title>
+  <link rel="shortcut icon" href="./imagens/index/favicon-32x32.png" type="image/x-icon">
   <link rel="stylesheet" href="./style/trabalheconosco.css">
   <link rel="stylesheet" href="./style/header.css">
   <link rel="stylesheet" href="./style/footer.css">
@@ -15,7 +16,10 @@
 
 <body>
   <header>
-    <img src="./imagens/index/logo.png" alt="iconemercado">
+    <div>
+      <img src="./imagens/index/logo.png" alt="Ícone Mercado">
+      <h1>Supermercado São Carlos</h1>
+    </div>
     <nav>
       <ul>
         <li><a href="./index.html">Home</a></li>
@@ -28,53 +32,58 @@
   </header>
   <main>
     <h1>Trabalhe Conosco</h1>
-    <form action="" method="POST" autocomplete="on">
-      <div>
-        <label for="nome">Nome completo: </label>
-        <input type="text" name="nome" id="nome" autocomplete="name" required>
-      </div>
-      <div>
-        <label for="email">Email: </label>
-        <input type="email" name="email" id="email" autocomplete="email" required>
-      </div>
-      <div>
-        <label for="telefone">Telefone: </label>
-        <input type="texto" name="telefone" id="telefone" required inputmode="numeric" maxlength="15" placeholder="(00) 00000-0000" autocomplete="tel">
-      </div>
-      <div>
-        <label for="estado">Estado: </label>
-        <select id="estado" name="estado" required>
-          <option value="">Selecione um estado</option>
-        </select>
-      </div>
-      <div>
-        <label for="cidade">Cidade: </label>
-        <select id="cidade" name="cidade" disabled required>
-          <option value="">Selecione um estado primeiro</option>
-        </select>
-      </div>
-      <div>
-        <label for="endereco">Endereço: </label>
-        <input type="text" name="endereco" id="endereco">
-      </div>
-      <div>
-        <label for="cargo">Cargo desejado: </label>
-        <input type="text" name="cargo" id="cargo" list="listacargo" placeholder="Cargos: ">
-        <datalist id="listacargo">
-          <option value="Açougueiro"></option>
-          <option value="Operador de caixa"></option>
-          <option value="Balconista"></option>
-          <option value="Repositor"></option>
-        </datalist>
-      </div>
-      <div>
-        <label for="curriculo">Currículo: </label>
-        <input type="file" name="curriculo" id="curriculo">
-      </div>
-      <div>
-        <input type="submit" value="Cadastrar">
-      </div>
-    </form>
+    <div class="formulario">
+      <form action="" method="POST" autocomplete="on">
+        <div>
+          <label for="nome">Nome completo: </label>
+          <input type="text" name="nome" id="nome" autocomplete="name" required>
+        </div>
+        <div>
+          <label for="email">Email: </label>
+          <input type="email" name="email" id="email" autocomplete="email" required>
+        </div>
+        <div>
+          <label for="telefone">Telefone: </label>
+          <input type="texto" name="telefone" id="telefone" required inputmode="numeric" maxlength="15" placeholder="(00) 00000-0000" autocomplete="tel">
+        </div>
+        <div class="estado-cidade">
+          <div>
+            <label for="estado">Estado: </label>
+            <select id="estado" name="estado" required>
+              <option value="">Selecione um estado</option>
+            </select>
+          </div>
+          <div>
+            <label for="cidade">Cidade: </label>
+            <select id="cidade" name="cidade" disabled required>
+              <option value="">Selecione um estado primeiro</option>
+            </select>
+          </div>
+        </div>
+        <div>
+          <label for="endereco">Endereço: </label>
+          <input type="text" name="endereco" id="endereco">
+        </div>
+        <div>
+          <label for="cargo">Cargo desejado: </label>
+          <input type="text" name="cargo" id="cargo" list="listacargo" placeholder="CARGOS:">
+          <datalist id="listacargo">
+            <option value="Açougueiro"></option>
+            <option value="Operador de caixa"></option>
+            <option value="Balconista"></option>
+            <option value="Repositor"></option>
+          </datalist>
+        </div>
+        <div>
+          <label for="curriculo">Currículo: </label>
+          <input type="file" name="curriculo" id="curriculo">
+        </div>
+        <div class="botoes">
+          <input type="submit" value="Enviar">
+          <input type="reset" value="Limpar">
+        </div>
+      </form>
+    </div>
   </main>
 
   <footer>
