--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <div class="encomendas">
       <h2>Encomende suas compras</h2>
       <p>Levaremos até você <img src="./imagens/index/image4.png" alt=""></p>
-      <a href="/"><img src="https://cdn-icons-png.flaticon.com/512/160/160200.png" alt="imgzap">Encomendar</a>
+      <a href="https://api.whatsapp.com/send?phone=5518997051341&fbclid=PAZXh0bgNhZW0CMTEAAaekHLdDjtzJI38Xe-IL_SXYVoXE7wf2CkDPJECx8FIV-pn25-tVC2x2Tr2cNw_aem_jY1r-ckRBimzmZkBowSXOA" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/160/160200.png" alt="imgzap">Encomendar</a>
     </div>
 
     <div class="conhecamercado">
@@ -137,7 +137,6 @@
       </div>
     </div>
 
-
     <div class="comoachar">
       <h2>Como nos achar</h2>
       <div class="gridmap">
@@ -149,9 +148,9 @@
           <p>Av. Frei Marcelo Manília, 427 <br> Centro - Buritama - SP</p>
           <h3>Funcionamento:</h3>
           <p>Segunda a Sábado das 6:00 às 20:00 <br> Domingo das 6:00 às 13:00</p>
-          <h3>Telefone</h3>
+          <h3>Telefone:</h3>
           <p>(18) 3691-2917</p>
-          <a href="https://maps.app.goo.gl/c5a73NDTmuxBxToc8">Ver no Maps</a>
+          <a href="https://maps.app.goo.gl/c5a73NDTmuxBxToc8" target="_blank">Ver no Maps</a>
         </div>
       </div>
     </div>
@@ -209,15 +208,15 @@
         <h3>Contato:</h3>
         <p>
           <img src="./imagens/index/whatsappiconfooter.png" alt="WhatsApp">
-          (18) 3691-2917
+          <a href="https://api.whatsapp.com/send?phone=5518997051341&fbclid=PAZXh0bgNhZW0CMTEAAaekHLdDjtzJI38Xe-IL_SXYVoXE7wf2CkDPJECx8FIV-pn25-tVC2x2Tr2cNw_aem_jY1r-ckRBimzmZkBowSXOA" target="_blank">(18) 3691-2917</a>
         </p>
         <p>
           <img src="./imagens/index/instagramiconfooter.png" alt="Instagram">
-          <a href="https://www.instagram.com/sm_saocarlos/">@sm_saocarlos</a>
+          <a href="https://www.instagram.com/sm_saocarlos/" target="_blank">@sm_saocarlos</a>
         </p>
         <p>
           <img src="./imagens/index/facebookiconfooter.png" alt="Facebook">
-          <a href="https://www.facebook.com/smsaocarlos/?locale=pt_BR">Supermercado São Carlos</a>
+          <a href="https://www.facebook.com/smsaocarlos/?locale=pt_BR" target="_blank">Supermercado São Carlos</a>
         </p>
       </div>
     </div>
