--- a/nossahistoria.html
+++ b/nossahistoria.html
@@ -68,9 +68,9 @@
       </div>
       <div class="contato">
         <h3>Contato:</h3>
-        <p><img src="./imagens/index/whatsappiconfooter.png" alt="">(18) 3691-2917</p>
-        <p><img src="./imagens/index/instagramiconfooter.png" alt=""><a href="https://www.instagram.com/sm_saocarlos/">@sm_saocarlos</a></p>
-        <p><img src="./imagens/index/facebookiconfooter.png" alt=""><a href="https://www.facebook.com/smsaocarlos/?locale=pt_BR">Supermercado São Carlos</a></p>
+        <p><img src="./imagens/index/whatsappiconfooter.png" alt=""><a href="https://api.whatsapp.com/send?phone=5518997051341&fbclid=PAZXh0bgNhZW0CMTEAAaekHLdDjtzJI38Xe-IL_SXYVoXE7wf2CkDPJECx8FIV-pn25-tVC2x2Tr2cNw_aem_jY1r-ckRBimzmZkBowSXOA" target="_blank">(18) 3691-2917</a></p>
+        <p><img src="./imagens/index/instagramiconfooter.png" alt=""><a href="https://www.instagram.com/sm_saocarlos/" target="_blank">@sm_saocarlos</a></p>
+        <p><img src="./imagens/index/facebookiconfooter.png" alt=""><a href="https://www.facebook.com/smsaocarlos/?locale=pt_BR" target="_blank">Supermercado São Carlos</a></p>
       </div>
     </div>
   </footer>
