--- a/trabalheconosco.html
+++ b/trabalheconosco.html
@@ -46,6 +46,10 @@
           <label for="telefone">Telefone: </label>
           <input type="texto" name="telefone" id="telefone" required inputmode="numeric" maxlength="15" placeholder="(00) 00000-0000" autocomplete="tel">
         </div>
+        <div>
+          <label for="cep">CEP:</label>
+          <input type="text" name="cep" id="cep" placeholder="00000-000" maxlength="9" required>
+        </div>
         <div class="estado-cidade">
           <div>
             <label for="estado">Estado: </label>
@@ -107,14 +111,14 @@
       </div>
       <div class="contato">
         <h3>Contato:</h3>
-        <p><img src="./imagens/index/whatsappiconfooter.png" alt="">(18) 3691-2917</p>
+        <p><img src="./imagens/index/whatsappiconfooter.png" alt=""><a href="https://api.whatsapp.com/send?phone=5518997051341&fbclid=PAZXh0bgNhZW0CMTEAAaekHLdDjtzJI38Xe-IL_SXYVoXE7wf2CkDPJECx8FIV-pn25-tVC2x2Tr2cNw_aem_jY1r-ckRBimzmZkBowSXOA">(18) 3691-2917</a></p>
         <p><img src="./imagens/index/instagramiconfooter.png" alt=""><a href="https://www.instagram.com/sm_saocarlos/">@sm_saocarlos</a></p>
         <p><img src="./imagens/index/facebookiconfooter.png" alt=""><a href="https://www.facebook.com/smsaocarlos/?locale=pt_BR">Supermercado São Carlos</a></p>
       </div>
     </div>
   </footer>
+  <script src="./script/cadastro.js"></script>
+  <script src="./script/cidade-estado.js"></script>
 </body>
-<script src="./script/cadastro.js"></script>
-<script src="./script/cidade-estado.js"></script>
 
 </html>
