--- a/contato.html
+++ b/contato.html
@@ -31,7 +31,47 @@
     </nav>
   </header>
   <main>
+    <h1>Entre em contato</h1>
 
+    <!-- BLOCO 1: Contato e Formulário -->
+    <section class="formscontato">
+      <!-- Esquerda: Texto -->
+      <div class="texto-contato">
+        <h2>NÃO SEJA TÍMIDO</h2>
+        <p>
+          Ficou com alguma dúvida, sugestão ou gostaria de falar com a gente?<br>
+          Preencha o formulário ou nos envie uma mensagem pelas redes sociais.<br>
+          Estamos prontos para te ajudar!
+        </p>
+        <h3>Contato:</h3>
+        <p><a href="https://api.whatsapp.com/send?phone=5518997051341&fbclid=PAZXh0bgNhZW0CMTEAAaekHLdDjtzJI38Xe-IL_SXYVoXE7wf2CkDPJECx8FIV-pn25-tVC2x2Tr2cNw_aem_jY1r-ckRBimzmZkBowSXOA" target="_blank"><img src="./imagens/index/whatsappiconfooter.png" alt=""> (18) 3691-2917</a></p>
+        <p><a href="https://www.instagram.com/sm_saocarlos/" target="_blank"><img src="./imagens/index/instagramiconfooter.png" alt=""> @sm_carlos</a></p>
+        <p><a href="https://www.facebook.com/smsaocarlos/?locale=pt_BR" target="_blank"><img src="./imagens/index/facebookiconfooter.png" alt=""> Supermercado São Carlos</a></p>
+      </div>
+
+      <!-- Direita: Formulário -->
+      <form action="" method="GET" autocomplete="on">
+        <input type="text" placeholder="Seu nome completo">
+        <input type="email" placeholder="Seu endereço de email">
+        <textarea name="mensagem" id="mensagem" cols="30" rows="10" placeholder="Sua mensagem"></textarea>
+        <input type="submit" value="Enviar">
+      </form>
+    </section>
+
+    <!-- BLOCO 2: Pedido e imagem -->
+    <section class="pedido-contato">
+      <!-- Esquerda: imagem -->
+      <div class="imagem-pedido">
+        <img src="./imagens/imagemcontato.png" alt="">
+      </div>
+
+      <!-- Direita: pedido e botão -->
+      <div class="bloco-pedido">
+        <h2>FAÇA UM PEDIDO</h2>
+        <p>Peça aqui que levaremos até você <img src="./imagens/index/image4.png" alt=""></p>
+        <a href="https://api.whatsapp.com/send?phone=5518997051341&" target="_blank"><img src="./imagens/wppcontato.png" alt=""> Pedir</a>
+      </div>
+    </section>
   </main>
 
   <footer>
