--- a/trabalheconosco.html
+++ b/trabalheconosco.html
@@ -33,7 +33,7 @@
   <main>
     <h1>Trabalhe Conosco</h1>
     <div class="formulario">
-      <form action="" method="POST" autocomplete="on">
+      <form action="enviar.php" method="POST" autocomplete="on" enctype="multipart/form-data">
         <div>
           <label for="nome">Nome completo: </label>
           <input type="text" name="nome" id="nome" autocomplete="name" required>
@@ -83,6 +83,10 @@
           <input type="file" name="curriculo" id="curriculo">
         </div>
         <div class="botoes">
+          <div style="display: none;">
+            <label>Não preencher:</label>
+            <input type="text" name="honeytrap" autocomplete="off">
+          </div>
           <input type="submit" value="Enviar">
           <input type="reset" value="Limpar">
         </div>
